--- a/src/main/resources/META-INF/resources/todo.html
+++ b/src/main/resources/META-INF/resources/todo.html
@@ -44,7 +44,7 @@
 
 
         <footer class="footer">
-            <a href="/health" target="_blank" class="info">Health</a> . 
+            <a href="/q/health" target="_blank" class="info">Health</a> . 
             <a href="/metrics" target="_blank" class="info">Metrics</a> .
             <a href="/swagger-ui" target="_blank" class="info">OpenAPI</a> .
             <a href="/graphql-ui" target="_blank" class="info">GraphQL</a>
